--- a/template.yml
+++ b/template.yml
@@ -186,6 +186,11 @@ Resources:
           Properties:
             Path: /posts/{id}
             Method: GET
+        ApiOptions: # CORS preflight
+          Type: Api
+          Properties:
+            Path: /posts/{id}
+            Method: OPTIONS
       Environment:
         Variables:
           DYNAMODB_URL: ""
