delete comments in local dev
handle preflight CORS requests in CommentDelete Lambda and update API path to `/posts/{postId}/comments/{commentId}`

--- a/template.yml
+++ b/template.yml
@@ -120,6 +120,11 @@ Resources:
           Properties:
             Path: /posts/{id}/comments/{commentId}
             Method: DELETE
+        ApiOptions: # CORS preflight
+          Type: Api
+          Properties:
+            Path: /posts/{postId}/comments/{commentId}
+            Method: OPTIONS
       Environment:
         Variables:
           DYNAMODB_URL: ""
