--- a/comments/CommentDelete/package.json
+++ b/comments/CommentDelete/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.958.0",
-    "@aws-sdk/lib-dynamodb": "^3.958.0"
+    "@aws-sdk/lib-dynamodb": "^3.958.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
