--- a/template.yml
+++ b/template.yml
@@ -37,7 +37,7 @@ Resources:
         Api:
           Type: Api
           Properties:
-            Path: /admin/users
+            Path: /admin/users/{userId}
             Method: PUT
       Environment:
         Variables:
@@ -53,7 +53,7 @@ Resources:
           Type: Api
           Properties:
             Path: /auth/login
-            Method: ANY
+            Method: POST
       Environment:
         Variables:
           DYNAMODB_URL: ""
@@ -68,7 +68,7 @@ Resources:
           Type: Api
           Properties:
             Path: /auth/register
-            Method: ANY
+            Method: POST
       Environment:
         Variables:
           DYNAMODB_URL: ""
@@ -94,6 +94,21 @@ Resources:
         Variables:
           DYNAMODB_URL: ""
 
+  CommentUpdate:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: comments/CommentUpdate
+      Handler: index.handler
+      Events:
+        Api:
+          Type: Api
+          Properties:
+            Path: /posts/{id}/comments/{commentId}
+            Method: PUT
+      Environment:
+        Variables:
+          DYNAMODB_URL: ""
+
   CommentDelete:
     Type: AWS::Serverless::Function
     Properties:
@@ -103,7 +118,7 @@ Resources:
         Api:
           Type: Api
           Properties:
-            Path: /comments/{id}
+            Path: /posts/{id}/comments/{commentId}
             Method: DELETE
       Environment:
         Variables:
@@ -235,7 +250,7 @@ Resources:
         Api:
           Type: Api
           Properties:
-            Path: /users/profile/avatars
+            Path: /admin/users/profile/avatar
             Method: POST
       Environment:
         Variables:
@@ -250,7 +265,7 @@ Resources:
         Api:
           Type: Api
           Properties:
-            Path: /users/profile/avatars/{avatarId}
+            Path: /admin/users/profile/avatar/{avatarId}
             Method: DELETE
       Environment:
         Variables:
@@ -265,7 +280,7 @@ Resources:
         Api:
           Type: Api
           Properties:
-            Path: /users/profile/email
+            Path: /admin/users/profile/email
             Method: DELETE
       Environment:
         Variables:
@@ -300,12 +315,12 @@ Resources:
         Api:
           Type: Api
           Properties:
-            Path: /admin/users/{userId}/avatar
+            Path: /admin/users/{userId}/avatar/{avatarId}
             Method: GET
         ApiOptions: # CORS preflight
           Type: Api
           Properties:
-            Path: /admin/users/{userId}/avatar
+            Path: /admin/users/{userId}/avatar/{avatarId}
             Method: OPTIONS
       Environment:
         Variables:
@@ -320,8 +335,8 @@ Resources:
         Api:
           Type: Api
           Properties:
-            Path: /users/profile/avatars/{avatarId}/active
-            Method: POST
+            Path: /admin/users/profile/avatar/active
+            Method: PUT
       Environment:
         Variables:
           DYNAMODB_URL: ""
@@ -335,7 +350,7 @@ Resources:
         Api:
           Type: Api
           Properties:
-            Path: /users/profile/email
+            Path: /admin/users/profile/email
             Method: PUT
       Environment:
         Variables:
@@ -350,7 +365,7 @@ Resources:
         Api:
           Type: Api
           Properties:
-            Path: /users/profile/password
+            Path: /admin/users/profile/password
             Method: PUT
       Environment:
         Variables:
